crates/toml_edit/tests/snapshots/invalid/string/bad-uni-esc-ml-04.stderr
TOML parse error at line 1, column 33
  |
1 | bad-uni-esc-ml-04 = """val\U0000"""
  |                                 ^
too few unicode value digits, expected unicode hexadecimal value
